--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fontsource/fira-mono": "^5.0.13",
+    "@fontsource/noto-sans": "^5.0.22",
     "fontfaceobserver": "^2.3.0",
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
